--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="logo-1">
-            <img src="/IMG_3273.JPG" alt="" height="100px" width="100px">
+            <img src="IMG_3273.JPG" alt="" height="100px" width="100px">
         </div>
 
         <section class="national">
